# universal_agent

./: .dockerignore  .env.example  .env.sample  .gitignore  .gitignore_append  .infisical.example.json  .infisical.json  .mcp.json  .railwayignore  .rgignore  001_sdk_concurrency_research.md  AGENTS.md  CLAUDE.md  CODIE Redesign Implementation.md  DOC-NEXT_Todoist_Integration_Handoff.md  Dockerfile  FRONTEND_IMPROVEMENTS.md  Fixing Harness Tooling Issues.md  GPU_FEATURE_IMPL_NOTES.md  INTERACTIONS_API_DESCRIPTION_GEMINI.MD  Investigating Clawdbot Memory Features.md  Investigating Heartbeat System.md  Investigating Image Encoding Issue.md  Investigating Telegram & YouTube Integrations.md  MEMORY.md  Makefile  PHASE_3A_PIPELINE_SIMPLIFICATION.md  PHASE_3B_DEVIN_PR_REVIEW.md  Procfile  QUICK_REFERENCE.md  README.md  RESEARCH_FINDINGS_SUMMARY.md  RESEARCH_SPECIALIST_COMPLETION_SUMMARY.txt  RESEARCH_SUMMARY.md  Regulating Atlas Convergence Briefs.md  SHIP_HANDOFF.md  TGTG_AUTH_SETUP.md  TMP  UA_Discord_Command_Control_Handoff.md  active_flow_system_breakdown.md  (+136 more)
CSI_Ingester/development/: README.md  THREADS_INFISICAL_SETUP.md  channels_watchlist.json  channels_watchlist_dormant.json  pyproject.toml  reddit_watchlist.json
CSI_Ingester/development/config/: config.yaml
CSI_Ingester/development/csi_ingester/: __init__.py  __main__.py  app.py  batch_brief.py  config.py  contract.py  infisical_bootstrap.py  llm_auth.py  logging.py  metrics.py  quality.py  scheduler.py  service.py  signature.py  threads_webhooks.py
CSI_Ingester/development/csi_ingester/adapters/: __init__.py  base.py  reddit_discovery.py  reddit_oauth.py  threads_api.py  threads_owned.py  threads_publishing.py  threads_trends.py  threads_trends_broad.py  threads_trends_seeded.py  youtube_channel_rss.py  youtube_playlist.py
CSI_Ingester/development/csi_ingester/analytics/: __init__.py  categories.py  emission.py
CSI_Ingester/development/csi_ingester/emitter/: __init__.py  retry.py  ua_client.py
CSI_Ingester/development/csi_ingester/net/: __init__.py  egress_adapter.py
CSI_Ingester/development/csi_ingester/store/: __init__.py  analysis_tasks.py  dedupe.py  delivery_attempts.py  dlq.py  events.py  opportunity_bundles.py  source_manager.py  source_state.py  sqlite.py  token_usage.py
CSI_Ingester/development/deployment/systemd/: csi-analysis-task-bootstrap.service  csi-analysis-task-bootstrap.timer  csi-analysis-task-runner.service  csi-analysis-task-runner.timer  csi-category-quality-loop.service  csi-category-quality-loop.timer  csi-daily-summary.service  csi-daily-summary.timer  csi-db-backup.service  csi-db-backup.timer  csi-delivery-health-auto-remediate.service  csi-delivery-health-auto-remediate.timer  csi-delivery-health-canary.service  csi-delivery-health-canary.timer  csi-delivery-slo-gatekeeper.service  csi-delivery-slo-gatekeeper.timer  csi-global-brief-reminder.service  csi-global-brief-reminder.timer  csi-global-trend-brief.service  csi-global-trend-brief.timer  csi-hourly-token-report.service  csi-hourly-token-report.timer  csi-ingester.env.example  csi-ingester.service  csi-playlist-tutorial-digest.service  csi-playlist-tutorial-digest.timer  csi-quality-assessment.service  csi-quality-assessment.timer  csi-reddit-semantic-enrich.service  csi-reddit-semantic-enrich.timer  csi-reddit-telegram-digest.service  csi-reddit-telegram-digest.timer  csi-reddit-trend-report.service  csi-reddit-trend-report.timer  csi-replay-dlq.service  csi-replay-dlq.timer  csi-report-product-finalize.service  csi-report-product-finalize.timer  csi-rss-insight-analyst.service  csi-rss-insight-analyst.timer  (+25 more)
CSI_Ingester/development/scripts/: _csi_pace.py  _csi_retry.py  _csi_secret_resolver.py  csi_analysis_task_bootstrap.py  csi_analysis_task_runner.py  csi_category_quality_loop.py  csi_daily_summary.py  csi_db_backup_rotate.sh  csi_delivery_health_auto_remediate.py  csi_delivery_health_canary.py  csi_delivery_slo_gatekeeper.py  csi_dev_env.sh  csi_emit_smoke_event.py  csi_global_brief_reminder.py  csi_global_trend_brief.py  csi_hourly_token_report.py  csi_install_systemd_extras.sh  csi_local_e2e_smoke.py  csi_migrate_from_legacy.sh  csi_nightly_validation.py  csi_parallel_validate.py  csi_playlist_tutorial_digest.py  csi_preflight.sh  csi_purge_youtube_backlog.py  csi_reddit_canary_setup.sh  csi_reddit_probe.py  csi_reddit_semantic_enrich.py  csi_reddit_telegram_digest.py  csi_reddit_trend_report.py  csi_replay_dlq.py  csi_report_product_finalize.py  csi_rss_alert_check.py  csi_rss_insight_analyst.py  csi_rss_quality_gate.py  csi_rss_reclassify_categories.py  csi_rss_semantic_enrich.py  csi_rss_telegram_digest.py  csi_rss_trend_report.py  csi_run.sh  csi_seed_dedicated_auth_env.py  (+15 more)
CSI_Ingester/development/tests/integration/: test_csi_to_ua_local_smoke.py
CSI_Ingester/development/tests/unit/: test_analysis_task_store.py  test_batch_brief.py  test_categories_score.py  test_config.py  test_csi_delivery_health_auto_remediate.py  test_csi_delivery_health_canary.py  test_csi_delivery_slo_gatekeeper.py  test_csi_enrich_pace.py  test_csi_ingester_unit_auth_wrapper.py  test_csi_playlist_tutorial_digest.py  test_csi_rss_quality_gate.py  test_csi_rss_selection_policy.py  test_csi_seed_dedicated_auth_env.py  test_csi_systemd_install_coverage.py  test_delivery_attempts.py  test_digest_cursor_recovery.py  test_egress_adapter.py  test_infisical_bootstrap.py  test_llm_auth.py  test_opportunity_bundles.py  test_reddit_discovery_adapter.py  test_retry.py  test_rss_adaptive_categories.py  test_rss_transcript_error_persistence.py  test_service_flow.py  test_signature.py  test_source_manager.py  test_source_quality_inprocess.py  test_source_state_store.py  test_sqlite_busy_timeout.py  test_threads_adapters.py  test_threads_api.py  test_threads_publish_canary_verify.py  test_threads_publish_smoke.py  test_threads_webhooks.py  (+9 more)
CSI_Ingester/development/var/: rss_insight_analyst_state.json
(+4982 files in other folders)
