[project]
name = "universal-agent"
version = "0.1.0"
description = "A universal agent built using Claude Agent SDK and the Composio Tool Router"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Kevin Dragan", email = "kevin.dragan@outlook.com" }
]
dependencies = [
    "anthropic>=0.75.0",
    "claude-agent-sdk>=0.1.18",
    "click>=8.3.1",
    "composio>=0.10.1",
    "composio-anthropic>=0.10.1",
    "composio-client>=1.21.0",
    "fastapi>=0.115.0",
    "logfire[httpx]>=4.16.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
]

