[project]
name = "universal-agent"
version = "0.1.0"
description = "A universal agent built using Claude Agent SDK and the Composio Tool Router"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kevin Dragan", email = "kevin.dragan@outlook.com" }
]
dependencies = [
    "anthropic>=0.75.0",
    "chromadb>=1.4.0",
    "claude-agent-sdk>=0.1.18",
    "click>=8.3.1",
    "composio>=0.10.6,<1.0.0",
    "composio-anthropic>=0.10.6,<1.0.0",
    "composio-claude-agent-sdk>=0.10.6,<1.0.0",
    "composio-client>=1.21.0",
    "defusedxml>=0.7.1",
    "edgartools>=5.6.0",
    "fastapi>=0.115.0",
    "fastmcp>=2.14.1",
    "ffmpeg-python>=0.2.0",
    "google-genai>=1.56.0",
    "gradio>=6.2.0",
    "logfire[httpx,system]>=4.16.0",
    "markitdown[pptx]>=0.1.4",
    "mcp-youtube>=0.2.0",
    "nest-asyncio>=1.6.0",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.5.0",
    "pypdfium2>=5.2.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "reportlab>=4.4.7",
    "rich>=14.2.0",
    "sentence-transformers>=5.2.0",
    "starlette>=0.50.0",
    "uvicorn[standard]>=0.34.0",
    "weasyprint>=67.0",
    "websockets>=14.0",
    "crawl4ai>=0.3.7",
    "playwright>=1.49.1",
    "yt-dlp>=2025.01.0",
    "markdown>=3.10",
    "agentic-learning>=0.4.3",
    "matplotlib>=3.10.8",
    "fpdf2>=2.8.5",
    "remotion-lambda>=4.0.409",
    "tasklib>=2.5.1",
    "manim>=0.19.2",
    "watchdog>=6.0.0",
]


[tool.ruff]
# Ignore common warnings that are intentional in this codebase:
# E402: Module level import not at top of file (intentional - after Logfire setup)
# F401: Imported but unused (sometimes kept for re-export or conditional use)
# F811: Redefinition of unused name (sometimes intentional for conditional imports)
lint.ignore = ["E402", "F401", "F811"]

[dependency-groups]
dev = [
    "pexpect>=4.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "llm: requires live LLM connectivity",
]
